k8s/backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
      - name: backend
        image: kaveenazuredev.azurecr.io/backend:latest
        ports:
        - containerPort: 8080
        volumeMounts:
        - name: firebase-key
          mountPath: /root/serviceAccountKey.json
          subPath: serviceAccountKey.json
          readOnly: true
      volumes:
      - name: firebase-key
        secret:
          secretName: firebase-key
---
apiVersion: v1
kind: Service
metadata:
  name: backend-service
spec:
  type: ClusterIP
  selector:
    app: backend
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 8080
